--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <start-class>com.allen.tuning.TuningDemoApplication</start-class>
     </properties>
 
     <dependencies>
@@ -41,6 +42,7 @@
     </dependencies>
 
     <build>
+        <finalName>tuning-demo</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
@@ -48,5 +50,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
